[package]
name = "soroban-escrow-contracts"
version = "0.1.0"
edition = "2021"
description = "Soroban smart contracts for the PadiPay Web2.5 escrow service"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
